# pytest_verify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: general.md
.claude/skills/beautiful-mermaid/: SKILL.md
.claude/skills/beautiful-mermaid/references/: design-guidelines.md  diagram-types.md  themes.md
.claude/skills/beautiful-mermaid/scripts/: render.mjs
.claude/skills/pytest-plugin-dev/: SKILL.md
.claude/skills/pytest-plugin-dev/references/: collectors.md  hooks.md  parametrize.md  reporters.md
pytest_verify/: __init__.py  _descriptors.py  _evaluator.py  _exceptions.py  _fixture.py  _stash.py  _types.py  _verify.py
tests/: test_checks.py  test_descriptors.py  test_evaluator.py  test_exceptions.py  test_fixture.py  test_public_api.py
